# groundwatercast-uk

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-grib.txt  requirements-pastas.txt  requirements.txt
config/: config.json
docs/: abstraction_screen_design.md  architecture.md  artifact_contract.md  data_sources.md  dataflow_diagram.tex  deploy.md  ensemble_forecast_design.md  free_data_migration.md  model.md  testing.md  trend_screen.md  uk_data_coverage.md
pages_app/: about.py  gw_outlook.py  home.py
scripts/: ab_gap_features.py  build_abstraction_influence.py  build_abstraction_points.py  build_abstraction_screen.py  build_artifact_pack.py  build_bedrock_geology.py  build_counties_geojson.py  build_ensemble_members.py  build_ensemble_summary.py  build_flow_catalogue.py  build_flow_members.py  build_flow_models.py  build_flow_seasonal_shadow.py  build_flow_shards.py  build_gw_normals.py  build_hindcast_verification.py  build_lidar_corridor.py  build_og_cards.py  build_pastas_members.py  build_pastas_models.py  build_pastas_summary.py  build_river_polylines.py  build_seasonal_outlook.py  build_seo_stubs.py  build_terrain_tile.py  build_trend_screen.py  build_valley.py  build_valley_flow.py  build_valley_mesh.py  build_valley_rainfall.py  build_valley_rivers.py  build_valley_stations.py  flow_fleet_scan.py  flow_gate_check.py  geo_region.py  log_cf_usage.py  national_catalogue_dryrun.py  purge_cf.py  refresh_gw_shard_tail.py  refresh_gw_tail.py  (+18 more)
web/: app.js  (+17 more)
(+158 files in other folders)
