# Metadata + tooling configuration ONLY.
#
# This repo is clone-and-run: there is deliberately no [build-system] table
# and `src/` is not an installed package. Tests and scripts import `src.*`
# relative to the repo root (run everything from the root with `python -m`).

[project]
name = "groundwatercast"
version = "1.0.0"
description = "GroundwaterCast UK — daily 14-day probabilistic groundwater forecasts and a 6-month seasonal outlook for England's boreholes, plus RiverCast low-flow outlooks for chalk streams, built entirely on open data (EA Hydrology, ECMWF ENS, Copernicus ERA5/SEAS5, Pastas TFN recharge)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
